# hdlc

./: .gitignore  CMakeLists.txt  esp32s3_16M.csv  genFirmware.py  platformio.ini  sdkconfig.m5stack-cores3
components/libfipc/: CMakeLists.txt
components/libosal/: CMakeLists.txt
include/: frame_cmd.h  frame_processor.h  hdlc_parser.h  logger.h
lib/uart/: uart.cpp  usbcdc.cpp
src/: CMakeLists.txt  main.cpp
src/app/: fileTransfer.cpp  fileTransfer.h  mainApp.cpp  ota.cpp  powerManagementTask.cpp  powerManagementTask.h  uiTask.cpp  uiTask.h  wifiManagerTask.cpp  wifiManagerTask.h
src/app/hdlc/: frame_processor.cpp  hdlc_parser.cpp
src/app/tasks/: serialHandler.cpp
src/lib/uart/: uart.cpp  usbcdc.cpp
test/: file_transfer_payloads.py  test_file_transfer_get.py  test_file_transfer_push.py  test_hdlc.py  test_wifi_set_credentials.py
